fixed horizontal scrollbar and added main font

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -4,11 +4,12 @@ html {
 
 main{
     background: transparent;
+    font-family: 'Sen', sans-serif;
 }
 
 .girl-bg {
     min-height: 100vh;
-    width: 100vw;
+    width: 100%;
     background: url(/static/images/bg-girl-flip.jpg) no-repeat fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
